--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -25,8 +26,8 @@
     "eslint-plugin-sort-exports": "^0.8.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "get-graphql-schema": "^2.1.2",
-    "prettier": "^3.0.0",
     "next": "13.4.19",
+    "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
