--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -29,6 +29,7 @@
     "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "typescript": "5.2.2"
   }
 }
