--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -27,7 +27,8 @@
     "next": "13.4.19",
     "prettier": "^3.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1"
   },
   "devDependencies": {
     "@types/node": "20.6.1",
