--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -13,8 +13,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -30,7 +28,11 @@
     "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.1",
+    "react-hook-form": "^7.46.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.6.1",
+    "@types/react": "18.2.21",
     "typescript": "5.2.2"
   }
 }
