add: 学生取得時に大学と居住地の情報も取るクエリ依存を追加

--- a/backend/gqlgen.yml
+++ b/backend/gqlgen.yml
@@ -85,3 +85,13 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  Student:
+    fields:
+      university:
+        resolver: true
+      prefecture:
+        resolver: true
+  University:
+    fields:
+      prefecture:
+        resolver: true
