--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
@@ -24,6 +25,7 @@
     "eslint-plugin-sort-exports": "^0.8.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "get-graphql-schema": "^2.1.2",
+    "graphql": "^16.8.0",
     "next": "13.4.19",
     "prettier": "^3.0.0",
     "react": "18.2.0",
