add: 専攻といいね数をクエリで取れるように追加

--- a/backend/gqlgen.yml
+++ b/backend/gqlgen.yml
@@ -91,6 +91,8 @@ models:
         resolver: true
       prefecture:
         resolver: true
+      majors:
+        resolver: true
   University:
     fields:
       prefecture:
