--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,26 +10,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sort-exports": "^0.8.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "get-graphql-schema": "^2.1.2",
-    "next": "13.4.19",
-    "prettier": "^3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.1"
+    "@mui/x-date-pickers": "^6.14.0",
+    "dayjs": "^1.11.9",
+    "eslint-config-next": "^13.4.19",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.6.1",
-    "@types/react": "18.2.21",
-    "typescript": "5.2.2"
+    "@types/node": "20.6.2"
   }
 }
