laboratoryの詳細をid指定でみられる

--- a/backend/gqlgen.yml
+++ b/backend/gqlgen.yml
@@ -93,6 +93,12 @@ models:
         resolver: true
       majors:
         resolver: true
+  Laboratory:
+    fields:
+      university:
+        resolver: true
+      majors:
+        resolver: true
   University:
     fields:
       prefecture:
