--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -3,7 +3,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.8.3",
@@ -14,11 +15,16 @@
     "@mui/x-date-pickers": "^6.14.0",
     "dayjs": "^1.11.9",
     "eslint-config-next": "^13.4.19",
+    "graphql": "^16.8.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.6.2"
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
+    "@types/node": "20.6.2",
+    "typescript": "^5.2.2",
+    "@graphql-codegen/introspection": "4.0.0"
   }
 }
