fix : codegen設定ファイル

--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -4,7 +4,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.8.3",
@@ -23,8 +23,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
+    "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/node": "20.6.2",
-    "typescript": "^5.2.2",
-    "@graphql-codegen/introspection": "4.0.0"
+    "typescript": "^5.2.2"
   }
 }
