--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -1,32 +1,38 @@
 {
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
-    "@mui/x-date-pickers": "^6.14.0",
-    "dayjs": "^1.11.9",
-    "eslint-config-next": "^13.4.19",
-    "graphql": "^16.8.1",
-    "next": "^13.4.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sort-exports": "^0.8.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "get-graphql-schema": "^2.1.2",
+    "next": "13.4.19",
+    "prettier": "^3.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/client-preset": "4.1.0",
-    "@graphql-codegen/introspection": "4.0.0",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-    "@types/node": "20.6.2",
-    "typescript": "^5.2.2"
+    "@types/node": "20.6.1",
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
