--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.9",
     "eslint-config-next": "^13.4.19",
     "graphql": "^16.8.1",
+    "mui-file-input": "^3.0.2",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
