add: idとstatusの条件からstudentLaboratoyのリストを取得するクエリを作成

--- a/backend/gqlgen.yml
+++ b/backend/gqlgen.yml
@@ -103,3 +103,9 @@ models:
     fields:
       prefecture:
         resolver: true
+  StudentLaboratory:
+    fields:
+      student:
+        resolver: true
+      laboratory:
+        resolver: true
