--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.3",
+    "@aws-sdk/client-s3": "^3.417.0",
+    "@aws-sdk/s3-request-presigner": "^3.417.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
