--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "@mui/x-date-pickers": "^6.14.0",
+    "aws-crt": "^1.18.0",
     "dayjs": "^1.11.9",
     "eslint-config-next": "^13.5.1",
     "graphql": "^16.8.1",
