--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -13,14 +13,16 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@mui/x-date-pickers": "^6.14.0",
     "aws-crt": "^1.18.0",
     "dayjs": "^1.11.9",
     "eslint-config-next": "^13.5.1",
     "graphql": "^16.8.1",
+    "install": "^0.13.0",
     "mui-file-input": "^3.0.2",
     "next": "^13.4.19",
+    "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
