--- a/student-frontend/package.json
+++ b/student-frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.14.9",
     "@mui/x-date-pickers": "^6.14.0",
     "aws-sdk": "^2.1462.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "eslint-config-next": "^13.4.19",
     "graphql": "^16.8.1",
