--- a/laboratory-frontend/package.json
+++ b/laboratory-frontend/package.json
@@ -1,39 +1,39 @@
 {
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint",
-      "codegen": "graphql-codegen --config codegen.yml"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "codegen": "graphql-codegen --config codegen.yml"
     },
     "dependencies": {
-      "@apollo/client": "^3.8.3",
-      "@aws-sdk/client-s3": "^3.417.0",
-      "@aws-sdk/s3-request-presigner": "^3.417.0",
-      "@emotion/react": "^11.11.1",
-      "@emotion/styled": "^11.11.0",
-      "@mui/icons-material": "^5.14.9",
-      "@mui/material": "^5.14.10",
-      "@mui/x-date-pickers": "^6.14.0",
-      "aws-crt": "^1.18.0",
-      "dayjs": "^1.11.9",
-      "eslint-config-next": "^13.5.1",
-      "graphql": "^16.8.1",
-      "install": "^0.13.0",
-      "mui-file-input": "^3.0.2",
-      "next": "^13.4.19",
-      "npm": "^10.1.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-router-dom": "^6.16.0"
+        "@apollo/client": "^3.8.3",
+        "@aws-sdk/client-dynamodb": "^3.433.0",
+        "@aws-sdk/client-s3": "^3.417.0",
+        "@aws-sdk/s3-request-presigner": "^3.417.0",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.9",
+        "@mui/material": "^5.14.10",
+        "@mui/x-date-pickers": "^6.14.0",
+        "aws-crt": "^1.18.0",
+        "dayjs": "^1.11.9",
+        "eslint-config-next": "^13.5.1",
+        "graphql": "^16.8.1",
+        "install": "^0.13.0",
+        "mui-file-input": "^3.0.2",
+        "next": "^13.4.19",
+        "npm": "^10.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.16.0"
     },
     "devDependencies": {
-      "@graphql-codegen/cli": "5.0.0",
-      "@graphql-codegen/client-preset": "4.1.0",
-      "@graphql-codegen/introspection": "4.0.0",
-      "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-      "@types/node": "20.6.2",
-      "typescript": "^5.2.2"
+        "@graphql-codegen/cli": "5.0.0",
+        "@graphql-codegen/client-preset": "4.1.0",
+        "@graphql-codegen/introspection": "4.0.0",
+        "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+        "@types/node": "20.6.2",
+        "typescript": "^5.2.2"
     }
-  }
-  
+}
